--- a/api-reference/core-testing-apis/test-structure.mdx
+++ b/api-reference/core-testing-apis/test-structure.mdx
@@ -1,282 +1,282 @@
 ---
-title: "Test Case and Fixture Structure"
-description: "Overview of how to define test cases, fixtures, and typed/parameterized tests. Explains the macro APIs, class inheritance models, and configuration options used to set up and group tests for clear, scalable testing suites."
+title: "Test Structure & Lifecycle"
+description: "Introduces the fundamental macros and functions for defining test cases, organizing test suites, and managing the test execution lifecycle in GoogleTest. This page provides sample usage, setup/teardown best practices, and references for reusable test patterns."
 ---
 
-# Test Case and Fixture Structure
+# Test Structure & Lifecycle
 
-This page presents a detailed overview of how to define, organize, and structure test cases and fixtures within GoogleTest, including the use of typed and parameterized tests. It explains how to leverage the macro APIs, the inheritance models for test fixtures, and configuration options to create clear, maintainable, and scalable test suites.
+GoogleTest provides a rich yet straightforward set of macros and functions to define test cases, group them into test suites, and manage the lifecycle of test execution. This page introduces these core constructs and best practices, focusing on how you can organize tests effectively, handle setup and teardown efficiently, and reuse testing patterns to achieve robust, maintainable test suites.
 
 ---
 
-## 1. Test Cases and Simple Tests
+## 1. Test Case and Test Suite Fundamentals
 
-A *test case* in GoogleTest groups related tests logically. Each test in a test case exercises a specific behavior or scenario.
+GoogleTest organizes tests into two main concepts:
 
-### Defining a Simple Test with `TEST`
+- **Test Case/Test Suite**: A collection of related tests; GoogleTest uses the term *Test Suite* in the API.
+- **Test**: An individual test inside a test suite, representing a single logical verification.
 
-Use the `TEST(TestSuiteName, TestName)` macro to create a test:
+You define tests primarily using the `TEST` macro, specifying the test suite (case) and test name.
+
+### Defining a Test with `TEST`
+
+```cpp
+TEST(TestSuiteName, TestName) {
+  // Test logic and assertions here
+}
+```
+
+- Each invocation defines a single, isolated test function.
+- `TestSuiteName` groups related tests logically, facilitating test organization.
+
+### Example
 
 ```cpp
 TEST(FactorialTest, HandlesZeroInput) {
   EXPECT_EQ(Factorial(0), 1);
 }
+
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(3), 6);
+  EXPECT_EQ(Factorial(5), 120);
+}
 ```
 
-- The first argument is the test suite name (grouping tests).
-- The second argument is the individual test name.
-- Both must be valid C++ identifiers without underscores for simplicity and to avoid internal naming conflicts.
+In this example, `FactorialTest` is the test suite grouping two tests.
 
-Each `TEST` is a standalone C++ function with no return value. Assertions inside determine the test's pass/fail state.
+<Check>
+Always use descriptive, concise test suite and test names to clearly indicate test intent.
+</Check>
 
-### Important Guidelines
+## 2. Test Fixtures (`TEST_F`) and Reusability
 
-- Keep test suite and test names simple, avoiding underscores (`_`). This prevents naming clashes and reserved identifier violations.
-- Test suite names should group logically related tests.
-- If two tests have the same suite and name in different namespaces, they are separate and allowed.
+When multiple tests in the same suite share common setup or resources, use **test fixtures**. A test fixture is a subclass of `testing::Test` that encapsulates shared objects and setup/teardown logic.
 
----
+### Creating a Test Fixture
 
-## 2. Test Fixtures: Sharing Common Setup with `TEST_F`
-
-When multiple tests need to share initialization or teardown code, test fixtures provide a clean and structured way.
-
-### Defining a Fixture Class
-
-Create a class derived from `testing::Test`:
+1. Define a fixture class deriving from `testing::Test`.
+2. Put shared data members in it.
+3. Override `SetUp()` and `TearDown()` to prepare and clean up before and after each test.
 
 ```cpp
 class QueueTest : public testing::Test {
  protected:
-  QueueTest() {
-    // Initialize data for each test
-    q1_.Enqueue(1);
-    q2_.Enqueue(2);
-    q2_.Enqueue(3);
+  void SetUp() override {
+    // Prepare test objects
+    q_.Enqueue(10);
   }
 
-  Queue<int> q0_;
-  Queue<int> q1_;
-  Queue<int> q2_;
+  void TearDown() override {
+    // Cleanup if needed
+  }
+
+  Queue<int> q_;
 };
 ```
 
-- Use `protected:` access so derived tests can access members.
-- Initialization can be done in constructor or `SetUp()`; prefer constructor for simple setups.
-- Destructor or `TearDown()` may be overridden for cleanup.
-
-### Using the Fixture in Tests
-
-Refer to the fixture class in `TEST_F`:
+### Using the Fixture with `TEST_F`
 
 ```cpp
-TEST_F(QueueTest, IsEmptyInitially) {
-  EXPECT_EQ(q0_.size(), 0);
+TEST_F(QueueTest, IsNotEmptyAfterEnqueue) {
+  EXPECT_NE(q_.size(), 0);
 }
 
-TEST_F(QueueTest, DequeueWorks) {
-  auto* n = q1_.Dequeue();
-  ASSERT_NE(n, nullptr);
-  EXPECT_EQ(*n, 1);
-  delete n;
+TEST_F(QueueTest, DequeueReturnsEnqueuedElement) {
+  int* val = q_.Dequeue();
+  ASSERT_NE(val, nullptr);
+  EXPECT_EQ(*val, 10);
+  delete val;
 }
 ```
 
-Each test uses a fresh instance of the fixture, ensuring no cross-test contamination.
+- Each test using `TEST_F` will get a fresh fixture object.
+- GoogleTest calls `SetUp()` before and `TearDown()` after each test.
 
----
+### Best Practice
 
-## 3. Typed Tests: Running the Same Test Code on Multiple Types
+- Use fixtures to avoid duplication of setup code.
+- Avoid shared mutable state that may impact test isolation.
 
-Typed tests enable executing the same tests for various types without code duplication.
+## 3. Parameterized Tests
 
-### Defining Typed Test Suites
-
-Declare a template test fixture:
+If you want to run the same test logic with different input values, use parameterized tests (`TEST_P`) with associated instantiations (`INSTANTIATE_TEST_SUITE_P`).
 
 ```cpp
-template <typename T>
-class MyFixture : public testing::Test {
+class FactorialTest : public testing::TestWithParam<int> {};
+
+TEST_P(FactorialTest, ReturnsNonNegative) {
+  int n = GetParam();
+  EXPECT_GE(Factorial(n), 0);
+}
+
+INSTANTIATE_TEST_SUITE_P(PositiveIntegers, FactorialTest, testing::Values(1, 2, 3, 4));
+```
+
+- `GetParam()` accesses the current test parameter.
+- Different inputs generate multiple tests with the same name.
+
+## 4. Test Lifecycle Functions
+
+GoogleTest allows you to manage lifecycle events beyond individual tests.
+
+### Suite-level Setup and Teardown
+
+- `SetUpTestSuite()`: Called once before the first test in a suite runs.
+- `TearDownTestSuite()`: Called once after the last test in the suite runs.
+
+Implement static methods in your fixture class:
+
+```cpp
+class MyTest : public testing::Test {
  public:
-  T value_;
+  static void SetUpTestSuite() {
+    // Expensive setup common to all tests
+  }
+  static void TearDownTestSuite() {
+    // Cleanup
+  }
 };
 ```
 
-List the types to test:
+### Per-test Setup and Teardown
+
+- Override the fixture's `SetUp()` (non-static) called before each test.
+- Override the fixture's `TearDown()` called after each test.
 
 ```cpp
-using MyTypes = testing::Types<int, double, std::string>;
-TYPED_TEST_SUITE(MyFixture, MyTypes);
-```
-
-### Writing Typed Tests
-
-Use `TYPED_TEST` to define tests with access to `TypeParam` representing the current type:
-
-```cpp
-TYPED_TEST(MyFixture, HasDefaultValue) {
-  TypeParam value = this->value_;
-  // test something with value
+void SetUp() override {
+  // Prepare for each test
+}
+void TearDown() override {
+  // Cleanup after each test
 }
 ```
 
-Typed tests give compile-time type safety and help detect type-dependent bugs.
+### Constructor / Destructor vs SetUp / TearDown
 
----
+- Constructors and destructors run before and after `SetUp`/`TearDown`.
+- Use constructors for trivial or RAII initialization.
+- Use `SetUp`/`TearDown` for test-related setup, especially if it might fail.
 
-## 4. Value-Parameterized Tests: Running Tests with Different Parameters
+<Tip>
+Avoid putting complex setup code in constructors; `SetUp()` allows for assertions and controlled failure handling.
+</Tip>
 
-These tests run the same code for a set of input values.
+## 5. Reusable Test Patterns
 
-### Defining Parameterized Tests
+To write clear, maintainable test suites:
 
-Inherit from `testing::TestWithParam<T>` where `T` is the parameter type:
+- Use **test fixtures** for shared setup.
+- Prefer **parameterized tests** to cover multiple inputs.
+- Group related tests logically and use consistent naming.
+- Manage expectations and states explicitly in setup/teardown.
+
+### Sample Test Fixture with Setup and TearDown
 
 ```cpp
-class MyParamTest : public testing::TestWithParam<int> {};
-```
+class DatabaseTest : public testing::Test {
+ protected:
+  void SetUp() override {
+    db_.Connect("test_db");
+    db_.InitializeSchema();
+  }
 
-Then define tests using `TEST_P`:
+  void TearDown() override {
+    db_.Disconnect();
+  }
 
-```cpp
-TEST_P(MyParamTest, IsEven) {
-  int param = GetParam();
-  EXPECT_EQ(param % 2, 0);
+  TestDatabase db_;
+};
+
+TEST_F(DatabaseTest, QueryReturnsExpectedResult) {
+  QueryResult result = db_.Query("SELECT * FROM table");
+  EXPECT_TRUE(result.HasRows());
 }
 ```
 
-### Instantiating Parameterized Tests
+## 6. Managing Test Execution Flow
 
-Generate test cases with `INSTANTIATE_TEST_SUITE_P`:
+- GoogleTest runs tests independently, creating and destroying fixtures per test.
+- Use `RUN_ALL_TESTS()` in `main()` to execute all defined tests.
+- Flag-based control (e.g., filtering tests, running disabled tests) is supported.
+
+### Example main function
 
 ```cpp
-INSTANTIATE_TEST_SUITE_P(EvenNumbers, MyParamTest, testing::Values(2, 4, 6));
+int main(int argc, char** argv) {
+  testing::InitGoogleTest(&argc, argv);
+  return RUN_ALL_TESTS();
+}
 ```
 
-You can also use ranges, containers, or combinations for more complex parameters.
+## 7. Best Practices and Common Pitfalls
 
----
+### Setup/TearDown
 
-## 5. Naming and Best Practices
-
-### Why Avoid Underscores in Test Names?
-
-Underscores can cause internal symbol collisions or reserved identifier violations when GoogleTest generates code:
-
-- Names are internally concatenated, meaning `TestSuite_TestName_Test` forms class names.
-- Starting or ending with underscores or using multiple underscores may lead to errors or ambiguities.
-
-### Fixture Construction
-
-- Prefer constructors for simple setup and cleanup via destructors.
-- Use `SetUp()` and `TearDown()` when:
-  - Virtual dispatch is needed.
-  - Assertions in setup and teardown are required.
-  - Throwing exceptions or robust teardown logic is necessary.
+- Ensure resource cleanup in `TearDown` to prevent leaks.
+- Use `ASSERT_*` in `SetUp` if failure should prevent test execution.
 
 ### Test Isolation
 
-Each `TEST` or `TEST_F` uses a new fixture instance, preventing shared state between tests.
+- Avoid shared global state between tests.
+- Each test should be independent and repeatable.
+
+### Naming
+
+- Use descriptive and unique test suite and test names.
+- Avoid underscores to comply with API restrictions.
+
+### Debugging
+
+- Use `SCOPED_TRACE` or logging within fixtures to aid identifying failures in complex setups.
+
+### Parameterized Tests
+
+- Choose parameterization when multiple cases share a behavior.
+- Combine parameterized tests with fixtures for maximum reuse.
+
+<Warning>
+Do not alter test fixture state in ways that can affect other tests; each test runs with a fresh fixture instance.
+</Warning>
+
+## 8. Troubleshooting Common Issues
+
+- **Test Not Running:** Verify that the test uses `TEST` or `TEST_F` macros and is linked correctly.
+- **Setup Failures Silently Skipped:** Use `ASSERT_*` macros in `SetUp()` to fail tests explicitly.
+- **Memory Leaks in Tests:** Make sure resources initialized in `SetUp()` are properly freed in `TearDown()`.
+- **Tests Affect Each Other:** Ensure no shared static or global state is mutated without isolation.
+
+## 9. Related Topics
+
+- [Assertions & Expectations](assertions.md) - Verifying test outcomes within test bodies.
+- [Mocking Basics](mocking-basics.md) - Creating mocks and setting expectations on dependencies.
+- [Parameterized Tests](advanced.md#value-parameterized-tests) - Writing flexible tests with varying inputs.
+- [Test Execution & Configuration](test-execution.md) - Running tests and controlling execution behavior.
 
 ---
 
-## 6. Summary of Macros and Usage
+For detailed coding examples and best practice patterns, see the [GoogleTest Primer](../primer.md) and the [Guides on Structuring Tests](../guides/core-workflows/structuring-tests.md).
 
-| Macro                            | Purpose                                            |
-|---------------------------------|----------------------------------------------------|
-| `TEST(TestSuite, TestName)`      | Simple test without fixture.                        |
-| `TEST_F(FixtureName, TestName)`  | Test using a fixture class for setup/teardown.    |
-| `TYPED_TEST_SUITE(Fixture, Types)`| Define typed test suite over multiple types.     |
-| `TYPED_TEST(Fixture, TestName)` | Define typed test, referring to `TypeParam`.       |
-| `TEST_P(Fixture, TestName)`      | Define parameterized test with runtime params.    |
-| `INSTANTIATE_TEST_SUITE_P`       | Instantiate parameterized tests with parameters.  |
 
 ---
 
-## 7. Troubleshooting Tips
-
-- Always define a default constructor for fixtures; GoogleTest needs to instantiate them.
-- Watch for naming rules that prohibit underscores in test suite and test names.
-- Use `ASSERT_*` assertions to guard against invalid data before dereferencing pointers.
-- Avoid mixing `EXPECT_CALL` and mock method calls in arbitrary order; set expectations before using mocks.
-- Be mindful of the volatile state in parameterized and typed tests to prevent shared mutable state issues.
-
----
-
-## 8. Additional Resources
-
-For more in-depth information and examples, please refer to:
-
-- [GoogleTest Primer](overview/core-concepts-architecture/core-concepts-terminology.md)
-- [Writing and Running Your First Test](getting-started/configuration-validation/first-test.md)
-- [Parameterized and Typed Tests Guide](guides/core-workflows/parameterized-tests.md)
-
----
-
-<CardGroup cols={2}>
-<Card title="Quick Sample: Using `TEST_F`">
-```cpp
-class FooTest : public testing::Test {
- protected:
-  FooTest() { count_ = 0; }
-  int count_;
-};
-
-TEST_F(FooTest, IncrementCount) {
-  count_++;
-  EXPECT_EQ(count_, 1);
-}
-
-TEST_F(FooTest, StartsAtZero) {
-  EXPECT_EQ(count_, 0);
-}
-```
-</Card>
-<Card title="Example: Typed Test">
-```cpp
-template <typename T>
-class StackTest : public testing::Test {
- public:
-  Stack<T> stack_;
-};
-
-using MyTypes = ::testing::Types<int, double, std::string>;
-TYPED_TEST_SUITE(StackTest, MyTypes);
-
-TYPED_TEST(StackTest, IsEmptyInitially) {
-  EXPECT_TRUE(this->stack_.IsEmpty());
-}
-```
-</Card>
-</CardGroup>
-
----
-
-## 9. Visual Workflow
+### Diagram: Test Execution Lifecycle
 
 ```mermaid
-flowchart TD
-  A[Write Test using TEST, TEST_F, TEST_P, or TYPED_TEST] --> B[Define Fixture if needed]
-  B --> C[Add Setup and TearDown]
-  C --> D[Add Test Logic and Assertions]
-  D --> E[Compile and Run via RUN_ALL_TESTS()]
-  E -->|Pass| F[Test Complete]
-  E -->|Fail| G[Debug and Fix Test]
-  G --> A
+sequenceDiagram
+  participant TestRunner
+  participant Fixture
+  participant TestCase
+
+  TestRunner->>Fixture: Instantiate test fixture
+  Fixture->>Fixture: Call constructor
+  Fixture->>Fixture: Call SetUp()
+  Fixture->>TestCase: Execute Test Body
+  Fixture->>Fixture: Call TearDown()
+  Fixture->>Fixture: Call destructor
+  TestRunner-->>TestRunner: Repeat for next test
 ```
 
----
-
-## 10. Key Best Practices
-
-- Use **fixtures** to share common setup/teardown logic and data among related tests.
-- Use **typed tests** to run the same test logic on multiple types, minimizing code duplication.
-- Use **value-parameterized tests** to verify behaviors across diverse input data systematically.
-- Avoid underscores in test and test suite names to prevent naming conflicts.
-- Define **default constructors** to prevent instantiation errors.
-
----
-
-This page equips you to structure your tests effectively using GoogleTest's core macros and fixture concepts, preparing you to write robust, maintainable, and scalable C++ tests.
+This captures the lifecycle steps executed by GoogleTest for each test.
 
 ---
