--- a/api-reference/core-testing-apis/assertions.mdx
+++ b/api-reference/core-testing-apis/assertions.mdx
@@ -1,296 +1,262 @@
 ---
-title: "Assertions and Test Expectations"
-description: "Complete catalog of available assertion macros and expectation methods, covering both fatal and non-fatal assertions, value comparisons, exception checks, and rich diagnostics. Includes usage patterns and extension mechanisms for custom assertions."
+title: "Assertions & Expectations"
+description: "Covers the full range of built-in assertions, including equality checks, exception assertions, death tests, and user-defined assertions. Explains fatal vs. non-fatal failures, with real-world code snippets and recommendations for effective test writing."
 ---
 
-# Assertions and Test Expectations
+# Assertions & Expectations
 
-GoogleTest offers a comprehensive catalog of assertion macros that let you verify your code’s behavior precisely and effectively. This page describes all assertion variants including fatal and non-fatal assertions, value comparisons, string and exception checks, predicate formatters, and mechanisms to extend assertions for custom use cases. Understanding and using these assertions empowers you to write reliable tests that provide clear diagnostics and actionable feedback.
+Explore the full spectrum of GoogleTest's built-in assertions, empowering you to verify program correctness effectively and robustly. This page guides you through fundamental concepts, assertion types, expectation mechanisms, and best practices to write clear, reliable tests.
 
 ---
 
-## 1. Assertion Overview
+## Understanding Assertions in GoogleTest
 
-Assertions in GoogleTest come in two flavors:
+Assertions are at the heart of test verification. They check whether your code behaves as expected and report failures when it does not. GoogleTest assertions come in pairs: `EXPECT_` macros generate **non-fatal failures** that allow the test to continue, while `ASSERT_` macros generate **fatal failures** aborting the current function immediately.
 
-- **Fatal assertions (`ASSERT_` macros):** Abort the current function immediately upon failure, preventing further test code from executing.
-- **Non-fatal assertions (`EXPECT_` macros):** Report failures but continue running the test function, allowing multiple failures to be detected in a single run.
+This distinction lets you control the flow of your tests - use non-fatal assertions when the test can still make sense after failure, and fatal assertions when continuing is pointless or unsafe.
 
-You choose fatal assertions when continuing does not make sense (e.g., dereferencing a null pointer), and non-fatal assertions when you want to report multiple validation points.
+### Key Points About Assertions
+- All assertions support streaming custom failure messages via `<<`, providing rich context.
+- Assertions evaluate arguments exactly once, avoiding side effects.
+- Wide string support ensures UTF-8 output for internationalization.
 
-All assertion macros support streaming of custom failure messages using `<<` for detailed, contextual diagnostics.
 
-Example:
+## Common Assertion Types
+
+### Boolean Assertions
+
+- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)`: Pass if `condition` is true.
+- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)`: Pass if `condition` is false.
+
+These are foundational and often used to check boolean logic or predicate results.
+
+### Binary Comparisons
+
+GoogleTest supports all standard comparisons with clear error messages:
+
+- Equality: `EXPECT_EQ(val1, val2)` / `ASSERT_EQ(val1, val2)`
+- Inequality: `EXPECT_NE(val1, val2)` / `ASSERT_NE(val1, val2)`
+- Less-than: `EXPECT_LT(val1, val2)` / `ASSERT_LT(val1, val2)`
+- Less-or-equal: `EXPECT_LE(val1, val2)` / `ASSERT_LE(val1, val2)`
+- Greater-than: `EXPECT_GT(val1, val2)` / `ASSERT_GT(val1, val2)`
+- Greater-or-equal: `EXPECT_GE(val1, val2)` / `ASSERT_GE(val1, val2)`
+
+
+> **Tip:** Use `EXPECT_STREQ` or `EXPECT_STRCASEEQ` for C string comparisons to avoid pointer comparisons.
+
+### String Assertions
+
+GoogleTest distinguishes between C-style string pointer equality and content equality. Use:
+
+- `EXPECT_STREQ(str1, str2)` for content equality
+- `EXPECT_STRNE(str1, str2)` for content inequality
+- Case-insensitive versions: `EXPECT_STRCASEEQ`, `EXPECT_STRCASENE`
+
+
+### Floating-Point Comparisons
+
+Due to rounding, exact equality is often unsuitable for floating-point types. GoogleTest provides:
+
+- `EXPECT_FLOAT_EQ(val1, val2)` / `ASSERT_FLOAT_EQ(val1, val2)` (float precision)
+- `EXPECT_DOUBLE_EQ(val1, val2)` / `ASSERT_DOUBLE_EQ(val1, val2)` (double precision)
+- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR(val1, val2, abs_error)`: Checks that the difference is within `abs_error`.
+
+### Exception Assertions
+
+Verify exception behavior when exceptions are enabled:
+
+- `EXPECT_THROW(statement, exception_type)` verifies `statement` throws `exception_type`.
+- `EXPECT_ANY_THROW(statement)` verifies `statement` throws any exception.
+- `EXPECT_NO_THROW(statement)` verifies `statement` throws no exceptions.
+
+
+### Explicit Success and Failure
+
+- `SUCCEED()` generates a success mark but does not end the test.
+- `FAIL()` generates a fatal failure and aborts the current function.
+- `ADD_FAILURE()` generates a nonfatal failure but lets the function continue.
+
+Use these for control-flow based verification or in situations not expressible as simple boolean assertions.
+
+---
+
+## Expectation Mechanisms for Mocked Objects
+
+GoogleTest integrates tightly with GoogleMock to allow **expectations** on mock method calls, specifying:
+
+- Which methods will be called
+- Argument match conditions
+- Call cardinality (how many times)
+- Ordering constraints
+- What actions to perform when called
+
+This mechanism leverages the `EXPECT_CALL` macro.
+
+### Setting Expectations with `EXPECT_CALL`
 
 ```cpp
-ASSERT_EQ(x.size(), y.size()) << "Vectors differ in length";
-EXPECT_EQ(x[0], y[0]) << "Vectors differ at first element";
+EXPECT_CALL(mock_object, MethodName(matchers...))
+    .With(multi_argument_matcher)  // Optional
+    .Times(cardinality)            // Optional
+    .InSequence(seq1, seq2, ...)   // Optional
+    .After(exp1, exp2, ...)        // Optional
+    .WillOnce(action)              // Optional
+    .WillRepeatedly(action)        // Optional
+    .RetiresOnSaturation();        // Optional
 ```
 
-## 2. Types of Assertions
+Each clause refines the expectation:
 
-### 2.1 Explicit Success and Failure
+- `.Times()` specifies how many times this expectation should be matched.
+- `.InSequence()` requires calls to occur in the order assigned to the same sequence.
+- `.After()` imposes partial ordering dependencies on expectations.
+- `.WillOnce()` and `.WillRepeatedly()` specify the behavior/results for calls.
+- `.RetiresOnSaturation()` makes the expectation inactive once fulfilled.
 
-- `SUCCEED()` —  Signals an explicit success point.
-- `FAIL()` — Immediately generates a fatal failure and aborts the function.
-- `ADD_FAILURE()` — Reports a non-fatal failure, continuing test execution.
+If `.Times()` is omitted, GoogleMock infers it based on the presence and number of `.WillOnce()` and `.WillRepeatedly()` clauses.
 
-Use `FAIL()` when you want to forcibly fail a test at a point you should never reach.
+### Using Matchers for Arguments
 
-### 2.2 Boolean Assertions
-
-- `EXPECT_TRUE(condition)` / `ASSERT_TRUE(condition)` — Verify that a boolean condition is true.
-- `EXPECT_FALSE(condition)` / `ASSERT_FALSE(condition)` — Verify that a boolean condition is false.
-
-### 2.3 Equality and Relational Assertions
-
-- Equality check macros:
-  - `EXPECT_EQ(val1, val2)` / `ASSERT_EQ(val1, val2)` — Check `val1 == val2`.
-  - `EXPECT_NE(val1, val2)` / `ASSERT_NE(val1, val2)` — Check `val1 != val2`.
-
-- Relational checks:
-  - `EXPECT_LT(val1, val2)` / `ASSERT_LT(val1, val2)` — Check `val1 < val2`.
-  - `EXPECT_LE(val1, val2)` / `ASSERT_LE(val1, val2)` — Check `val1 <= val2`.
-  - `EXPECT_GT(val1, val2)` / `ASSERT_GT(val1, val2)` — Check `val1 > val2`.
-  - `EXPECT_GE(val1, val2)` / `ASSERT_GE(val1, val2)` — Check `val1 >= val2`.
-
-Pointers are compared by address, so use string comparison macros for C strings.
-
-### 2.4 String Assertions
-
-GoogleTest provides string-specific assertions to check C strings and wide strings by content rather than pointer:
-
-- `EXPECT_STREQ(s1, s2)` / `ASSERT_STREQ(s1, s2)` — Contents are equal.
-- `EXPECT_STRNE(s1, s2)` / `ASSERT_STRNE(s1, s2)` — Contents differ.
-- `EXPECT_STRCASEEQ(s1, s2)` / `ASSERT_STRCASEEQ(s1, s2)` — Case-insensitive equality.
-- `EXPECT_STRCASENE(s1, s2)` / `ASSERT_STRCASENE(s1, s2)` — Case-insensitive inequality.
-
-Use these when comparing character string contents, especially with C-style strings.
-
-### 2.5 Floating-Point Comparison
-
-Due to precision and rounding issues, floating-point numbers require special handling.
-
-- `EXPECT_FLOAT_EQ(val1, val2)` / `ASSERT_FLOAT_EQ(val1, val2)` — Approximate equality for `float`, within 4 ULPs.
-- `EXPECT_DOUBLE_EQ(val1, val2)` / `ASSERT_DOUBLE_EQ(val1, val2)` — Approximate equality for `double`, within 4 ULPs.
-- `EXPECT_NEAR(val1, val2, abs_error)` / `ASSERT_NEAR(val1, val2, abs_error)` — Within a specified absolute error threshold.
-
-These guards against false failures due to small floating-point inaccuracies.
-
-### 2.6 Exception Assertions
-
-Requires exceptions enabled in your build.
-
-- `EXPECT_THROW(statement, ExceptionType)` / `ASSERT_THROW(statement, ExceptionType)` — Verify that `statement` throws the specified exception.
-- `EXPECT_ANY_THROW(statement)` / `ASSERT_ANY_THROW(statement)` — Verify that `statement` throws any exception.
-- `EXPECT_NO_THROW(statement)` / `ASSERT_NO_THROW(statement)` — Verify that `statement` does not throw.
-
-Example:
+Matchers define what arguments to expect. Use `_` as a wildcard matcher if you don't care about an argument:
 
 ```cpp
-EXPECT_THROW(my_function(), std::runtime_error);
-ASSERT_NO_THROW(my_safe_function());
+EXPECT_CALL(foo, DoThis(_))  // matches any argument
 ```
 
-### 2.7 Predicate Assertions
+You can use more precise matchers like `Eq()`, `Ge()`, `Lt()` or even custom matchers for detailed validation.
 
-Useful for testing complex conditions that do not fit simple macros. They allow using custom functions or predicate-formatters for clearer messages.
+### Handling Multiple Expectations on Same Method
 
-- `EXPECT_PRED1(pred, val1)` ... `EXPECT_PRED5(pred, val1, val2, ... val5)` — Use a predicate function returning `bool` with 1 to 5 arguments.
-- `EXPECT_PRED_FORMAT1(pred_formatter, val1)` ... `EXPECT_PRED_FORMAT5(pred_formatter, val1, ...)` — Use a predicate-formatter returning an `AssertionResult`, allowing custom failure messages.
+GoogleMock searches expectations in reverse order, so specific expectations should be declared after general catch-all expectations. This enables layering behavior and overrides cleanly.
 
-Example:
+### Ordering Calls
 
-```cpp
-bool IsEven(int n) { return n % 2 == 0; }
-EXPECT_PRED1(IsEven, 4); // Passes
-EXPECT_PRED1(IsEven, 3); // Fails with argument value printed
-```
-
-### 2.8 Windows HRESULT Assertions
-
-Windows users can assert HRESULT values conveniently.
-
-- `EXPECT_HRESULT_SUCCEEDED(expression)` / `ASSERT_HRESULT_SUCCEEDED(expression)` — Verifies HRESULT success.
-- `EXPECT_HRESULT_FAILED(expression)` / `ASSERT_HRESULT_FAILED(expression)` — Verifies HRESULT failure.
-
-Provides detailed error messages with human-readable HRESULT codes.
-
-### 2.9 No-Fatal Failure Assertions
-
-Sometimes you want to assert that a statement doesn't generate fatal failures.
-
-- `EXPECT_NO_FATAL_FAILURE(statement)` / `ASSERT_NO_FATAL_FAILURE(statement)` — Succeeds if `statement` generates no fatal failures.
-
-Useful to ensure helper functions or code blocks don't cause fatal errors.
-
-## 3. Using Assertion Macros
-
-### 3.1 Syntax
-
-All assertions are macros usually prefixed with `EXPECT_` or `ASSERT_`. They accept one or more expressions.
-
-You can add custom failure messages using the output streaming operator `<<`:
+The `InSequence` utility lets you group expectations to require strict order:
 
 ```cpp
-EXPECT_EQ(a, b) << "Mismatch where a does not equal b";
-```
-
-### 3.2 Selecting Between `EXPECT_` and `ASSERT_`
-
-- Use `EXPECT_` for checks where continuing after failure is safe and beneficial.
-- Use `ASSERT_` when continuing the test after failure is unsafe or meaningless.
-
-### 3.3 Evaluating Arguments Exactly Once
-
-All assertions guarantee that the arguments are evaluated exactly once, preventing side effects from causing misleading or multiple messages.
-
-### 3.4 Comparing Null Pointers
-
-For pointers, prefer comparing with `nullptr` instead of `NULL` or `0` for clarity.
-
-### 3.5 Streaming Wide Strings
-
-GoogleTest supports streaming wide (`wchar_t*` or `std::wstring`) strings correctly, translating output to UTF-8.
-
-### 3.6 Failure Message Details
-
-On failure, GoogleTest outputs:
-
-- The assertion expression.
-- The values of the compared arguments.
-- For equality failures, expected versus actual values with helpful diffs for strings.
-- Custom user message appended.
-
-## 4. Extending Assertions
-
-### 4.1 Writing Custom Assertion Macros
-
-If your tests require specialized validation, write custom assertion functions returning `testing::AssertionResult` objects, which can encapsulate success/failure and detailed messages.
-
-Example:
-
-```cpp
-testing::AssertionResult IsEven(int n) {
-  if (n % 2 == 0) return testing::AssertionSuccess();
-  return testing::AssertionFailure() << n << " is odd";
+{
+  InSequence s;
+  EXPECT_CALL(mock, Foo());
+  EXPECT_CALL(mock, Bar());
 }
 ```
 
-Use with:
+Now `Foo()` must be called before `Bar()`.
 
-```cpp
-EXPECT_TRUE(IsEven(value));
-```
+### Uninteresting, Unexpected, and Excessive Calls
 
-### 4.2 Predicate-Formatter Assertions
+- **Uninteresting calls:** methods called without any `EXPECT_CALL` set. They use default action and generate warnings by default.
+- **Unexpected calls:** method calls that do not match any active expectation - *always an error*.
+- **Excessive calls:** method calls exceeding the specified cardinality - *always an error*.
 
-Leverage `EXPECT_PRED_FORMAT*` macros to format failure messages with greatest control. This is helpful when the default message is too generic or when the predicate arguments cannot be streamed directly.
 
-## 5. Best Practices & Common Pitfalls
-
-- Prefer `EXPECT_` macros for most checks to maximize test feedback.
-- Use `ASSERT_` macros for critical preconditions to prevent subsequent undefined behavior.
-- Avoid fatal assertions in constructors or destructors to prevent partially constructed objects.
-- Use string comparison macros for C strings to avoid pointer equality checks.
-- Use floating-point comparison macros to handle precision subtleties.
-- Add custom failure messages to aid debugging and traceability.
-- Be mindful of the test’s control flow when using fatal assertions.
-- Utilize `SCOPED_TRACE` to add context to assertions within helper subroutines.
-- When handling exceptions, enable exceptions in your build and use the exception assertion macros.
-
-## 6. Examples
-
-### 6.1 Basic Assertions
-
-```cpp
-TEST(FactorialTest, Correctness) {
-  EXPECT_EQ(Factorial(0), 1);
-  EXPECT_EQ(Factorial(5), 120) << "Factorial calculation is incorrect";
-  ASSERT_GT(Factorial(3), 0);
-}
-```
-
-### 6.2 String Assertions
-
-```cpp
-const char* actual = "Hello";
-EXPECT_STREQ("Hello", actual);
-EXPECT_STRNE("Hello", "World");
-EXPECT_STRCASEEQ("HELLO", "hello");
-EXPECT_STRCASENE("HELLO", "world");
-```
-
-### 6.3 Floating-Point Assertions
-
-```cpp
-float expected = 3.14f;
-float actual = 3.1415f;
-EXPECT_FLOAT_EQ(expected, actual);
-EXPECT_NEAR(expected, actual, 0.01f);
-```
-
-### 6.4 Exception Assertions
-
-```cpp
-EXPECT_THROW(FunctionThatThrows(), std::runtime_error);
-ASSERT_NO_THROW(FunctionThatDoesNotThrow());
-```
-
-### 6.5 Custom Predicate
-
-```cpp
-testing::AssertionResult IsPositive(int n) {
-  if (n > 0) return testing::AssertionSuccess();
-  return testing::AssertionFailure() << n << " is not positive.";
-}
-EXPECT_TRUE(IsPositive(value));
-```
-
-## 7. Troubleshooting
-
-- **Assertion not firing?** Check that your test runs, and that the condition is properly evaluated.
-- **Unexpected test abort due to `ASSERT_`?** Use `EXPECT_` if you desire test continuation.
-- **Failure message unclear?** Use predicate-formatters or provide custom failure messages with streaming.
-- **Issues with string comparison?** Use the `STR*` macros for C strings explicitly.
-- **Floating-point failures when values appear close?** Use `EXPECT_FLOAT_EQ`, `EXPECT_DOUBLE_EQ`, or `EXPECT_NEAR` instead of plain equality.
-
-## Additional Notes
-
-- All assertion macros are defined in `<gtest/gtest.h>`.
-- Assertions show the exact source file and line number on failure, with the failing expression.
-- Use `HasFatalFailure()`, `HasNonfatalFailure()`, and `HasFailure()` to programmatically detect test failure states inside your tests.
+> **Tip:** Use `NiceMock<>` to suppress uninteresting call warnings or `StrictMock<>` to treat such calls as failures.
 
 ---
 
-## References
+## Using Built-in Matchers and Actions
 
-- [GoogleTest Assertions Reference (official)](/docs/reference/assertions.md)
-- [GoogleTest Primer - Basic Concepts and ASSERT/EXPECT](../primer.md#assertions)
-- [Advanced Assertion Patterns and Predicate Assertions](../advanced.md#more-assertions)
-- [GoogleMock Matchers & Expectations](../api-reference/mocking-apis/mock-expectations-actions)
-- [Using SCOPED_TRACE for better diagnostic context](../advanced.md#adding-traces-to-assertions)
+GoogleTest's powerful built-in matchers facilitate flexible argument matching.
 
+You can combine matchers with logical operators (`AllOf`, `AnyOf`, `Not`), and match complex data structures.
+
+Actions specify what happens when a mock method is invoked:
+
+- `Return(value)` returns the specified value.
+- `ReturnRef(variable)` returns a reference.
+- `Invoke(function_or_lambda)` calls a user function.
+- `SetArgPointee<N>(value)` sets the N-th argument by pointer.
+- `DoAll(actions...)` executes multiple actions in sequence (return value from last).
+
+Use these building blocks to create concise, expressive mock behavior.
 
 ---
 
-## Summary Diagram of Assertion Flow
+## Best Practices and Common Pitfalls
 
-```mermaid
-flowchart TD
-  Start([Start Test]) --> CheckCode[Evaluate Assertion Condition]
-  CheckCode -->|True| Pass[Assertion Succeeds]
-  CheckCode -->|False| FailType{Is it Fatal?}
-  FailType -->|Yes| Abort[Abort Current Function]
-  FailType -->|No| Continue[Record Failure, Continue Test]
-  Pass --> Continue
-  Continue --> End([Test Continues or Ends])
+- Always set expectations before exercising mocks to avoid undefined behavior.
+- Prefer `ON_CALL` to set default behavior without verifying calls.
+- Use `EXPECT_CALL` sparingly to check the interactions you're interested in.
+- Beware that expectations are "sticky": they remain active after saturation unless `RetiresOnSaturation()` is used.
+- Leaked mocks prevent verification; use `Mock::AllowLeak(mock_object)` if intentional.
+- Control verbosity with `--gmock_verbose` flag (`info`, `warning`, or `error`) to get appropriate diagnostic detail.
+
+---
+
+## Advanced Assertion Techniques
+
+GoogleTest supports advanced assertions for complex use cases:
+
+### Predicate Assertions
+
+Use predicates and predicate-formatters to provide custom assertion logic and detailed failure messages.
+
+```cpp
+EXPECT_PRED2(MyPredicate, val1, val2);
+EXPECT_PRED_FORMAT2(MyPredicateFormatter, val1, val2);
+```
+
+### Exception and Death Assertions
+
+- Use `EXPECT_THROW`, `EXPECT_ANY_THROW`, `EXPECT_NO_THROW` to verify exception behavior.
+- Use `EXPECT_DEATH`, `EXPECT_EXIT` to verify that code terminates with expected output or exit codes.
+
+### Floating Point and String Matchers
+
+Leverage GoogleTest’s special floating-point assertions like `EXPECT_FLOAT_EQ` and regex string matchers with `EXPECT_THAT` for expressive checks.
+
+### Using `EXPECT_THAT`
+
+Combine GoogleTest with GoogleMock's matcher library to write expressive, readable assertions:
+
+```cpp
+EXPECT_THAT(actual_value, StartsWith("Hello"));
+EXPECT_THAT(container, ElementsAre(1, 2, 3));
 ```
 
 ---
 
-This completes the full API reference for GoogleTest’s assertions and test expectations, enabling you to verify program behavior across conditions, types, and scenarios with precision and clarity.
+## Troubleshooting and Debugging
+
+- Enable verbose logging with `--gmock_verbose=info` to see detailed mock call traces.
+- Use `SCOPED_TRACE` to add context to failures in deeply nested functions.
+- Trigger heap checkers or force verification via `Mock::VerifyAndClearExpectations()` if mock verification does not happen at expected times.
 
 ---
 
-{/* End of Assertions and Test Expectations */}
+## Related Documentation
+
+- [GoogleTest Primer](primer.md): Introduction to writing tests
+- [gMock for Dummies](docs/gmock_for_dummies.md): Beginner’s guide to mocking
+- [Mocking Reference](docs/reference/mocking.md): Detailed API for mocking
+- [Assertions Reference](docs/reference/assertions.md): Full assertion macros
+- [gMock Cookbook](docs/gmock_cook_book.md): Advanced mocking recipes
+- [Writing Maintainable Tests](guides/troubleshooting-and-patterns/writing-maintainable-tests.md): Best practices
+
+---
+
+## Summary
+
+GoogleTest assertions and GoogleMock expectations form a flexible foundation to verify both direct results and interaction semantics. Learning to leverage matchers, call cardinalities, ordering constraints, and expressive failure reports will empower you to write robust, maintainable tests that precisely capture your code’s intended behavior.
+
+---
+
+<Steps>
+<Step title="Begin with Simple Assertions">
+Start by verifying boolean conditions and equality with `EXPECT_TRUE`, `EXPECT_EQ`.
+</Step>
+<Step title="Use Matchers for Complex Argument Checking">
+Employ matchers like `_`, `Ge()`, `HasSubstr()` in `EXPECT_CALL` to specify detailed call expectations.
+</Step>
+<Step title="Refine Call Expectations">
+Apply clauses like `Times()`, `InSequence()`, and `After()` to model call count and order.
+</Step>
+<Step title="Control Mock Strictness">
+Choose between `NaggyMock`, `NiceMock`, and `StrictMock` based on test requirements.
+</Step>
+<Step title="Leverage Advanced Assertions and Custom Matchers">
+Utilize predicate assertions, death assertions, and custom matchers for unique needs.
+</Step>
+</Steps>
+
+---
